# OOP

Hashtag/: .env  CMakeLists.txt  main.cpp  tests.cpp
Hashtag/hashtag/: CMakeLists.txt
Hashtag/hashtag/include/: hashtag.h
Hashtag/hashtag/src/: hashtag.cpp
Task_1/: .env  CMakeLists.txt  input.txt  main.cpp  output.txt  task_1.cpp
Task_3/: .env  CMakeLists.txt  docker-compose.yml  main.cpp  tests.cpp
Task_3/task_3/: CMakeLists.txt
Task_3/task_3/include/: task_3.h
Task_3/task_3/src/: task_3.cpp
Task_4/: .env  CMakeLists.txt  main.cpp
Task_4/task_4/: CMakeLists.txt
Task_4/task_4/include/: task_4.h
Task_4/task_4/src/: task_4.cpp
Task_5/: .env  CMakeLists.txt  Dockerfile
Task_5/src/: main.cpp
Task_6/: .env  CMakeLists.txt  main.cpp  tests.cpp
Task_6/task_6/: CMakeLists.txt
Task_6/task_6/include/: task_6.h
Task_6/task_6/src/: task_6.cpp
